# CF-VPN

./: .gitattributes  README.md  build.gradle.kts  compiler_errors.txt  metadata.json  release_build_log.txt  settings.gradle.kts  test_execution.txt
.github/workflows/: android-build.yml  android.yml
app/: build.gradle.kts  build.gradle.kts.additions.txt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/: MainActivity.kt
app/src/main/java/com/example/data/: VpnConfig.kt  VpnConfigDao.kt  VpnDatabase.kt  VpnRepository.kt
app/src/main/java/com/example/service/: XrayVpnService.kt
app/src/main/java/com/example/ui/: VpnViewModel.kt
app/src/main/java/com/example/ui/theme/: Color.kt  Theme.kt
app/src/main/java/com/example/util/: VpnParser.kt
app/src/main/java/com/example/vpn/: Hev2Socks.kt  IpPoolManager.kt  VpnConnectionManager.kt  VpnServiceSimulator.kt
app/src/main/jni/: Android.mk  Application.mk  hev_bridge.c
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/: ExampleRobolectricTest.kt  GreetingScreenshotTest.kt
cfvpn-app/: .gitignore  README.md  settings.gradle.kts
cfvpn-app/.github/workflows/: build.yml
cfvpn-app/app/: build.gradle.kts
cfvpn-app/app/src/main/cpp/: CMakeLists.txt  tun2socks_jni.c
cfvpn-app/app/src/main/java/com/example/cfvpn/vpn/: CfVpnService.kt  Tun2SocksManager.kt
gradle/wrapper/: gradle-wrapper.properties
